test/library/standard/Communication/errors.putHiLoc.good
errors.chpl:21: error: halt reached - The destination locale ID (2) for Communication.put is out of bounds.
