test/library/standard/Communication/errors.execopts
--mode=errMode.getNegLoc   # errors.getNegLoc
--mode=errMode.getHiLoc    # errors.getHiLoc
--mode=errMode.getNegSize  # errors.getNegSize
--mode=errMode.putNegLoc   # errors.putNegLoc
--mode=errMode.putHiLoc    # errors.putHiLoc
--mode=errMode.putNegSize  # errors.putNegSize
